# PeopleBooksMCP

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  peoplebooks.example.toml  pyproject.toml
docs/: GPT5.6-findings.md  IMPLEMENTATION_PLAN.md
docs/old/: IMPLEMENTATION_PLAN.md
migrations/versions/: 0001_phase_2_data_model.py  0002_phase_5_full_text_indexing.py  0003_hybrid_search.py
src/peoplebooks_mcp/: __init__.py  __main__.py  cli.py  config.py  database.py  indexing.py  mcp_server.py
src/peoplebooks_mcp/parser/: __init__.py  leaf.py  navigation.py
src/peoplebooks_mcp/repositories/: __init__.py  postgres.py
src/peoplebooks_mcp/scraper/: __init__.py  discovery.py  fetcher.py  oracle.py  scrape.py
tests/: conftest.py  postgres_test_utils.py  test_cli.py  test_config.py  test_database_migrations.py  test_discovery_service.py  test_fetcher.py  test_imports.py  test_indexing.py  test_mcp_server.py  test_oracle_urls.py  test_parser_leaf.py  test_parser_navigation.py  test_postgres_test_utils.py  test_readme.py  test_repositories_postgres.py  test_scrape_service.py  test_search_repository.py  test_status_repository.py
tests/fixtures/: oracle_home.html  oracle_products_home.html  oracle_tpcr_book.html  oracle_tpcr_leaf.html
