[project]
name = "peoplebooks-mcp"
version = "0.1.0"
description = "Scrape Oracle PeopleBooks into PostgreSQL and expose read-only MCP documentation search."
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.0",
    "beautifulsoup4>=4.14.0",
    "httpx>=0.28.0",
    "lxml>=6.0.0",
    "mcp>=1.15.0",
    "psycopg[binary]>=3.2.0",
    "typer>=0.20.0",
]

[project.scripts]
peoplebooks = "peoplebooks_mcp.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peoplebooks_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
